0513 16강까지 수정

--- a/NetCore.Web/NetCore.Web.csproj
+++ b/NetCore.Web/NetCore.Web.csproj
@@ -15,7 +15,7 @@
   <ItemGroup>
     <ProjectReference Include="..\NetCore.Migrations\NetCore.Migrations.csproj" />
     <ProjectReference Include="..\NetCore.Services\NetCore.Services.csproj" />
-    <ProjectReference Include="..\NetCore.Utilites\NetCore.Utilites.csproj" />
+    <ProjectReference Include="..\NetCore.Utilities\NetCore.Utilities.csproj" />
   </ItemGroup>
 
 </Project>
